--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -3,14 +3,14 @@ spring:
     name: gateway-service
   cloud:
     consul:
-      host: 192.168.99.100
+      host: 192.168.100.29
       config:
         format: YAML
       discovery:
-        register-health-check: false
+        register-health-check: true
 
     loadbalancer:
       ribbon:
         enabled: false
 
-server.port: 8080
+server.port: 5000
