--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -8,9 +8,12 @@
 		<version>2.2.0.RELEASE</version>
 		<relativePath/>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>gateway-service</artifactId>
+	<modelVersion>4.0.0</modelVersion>
+  	<groupId>slick.mali</groupId>
+  	<artifactId>gateway-service</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  	<name>gateway-service</name>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -21,16 +24,6 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
-<!--			<exclusions>-->
-<!--				<exclusion>-->
-<!--					<groupId>org.springframework.cloud</groupId>-->
-<!--					<artifactId>spring-cloud-netflix-hystrix</artifactId>-->
-<!--				</exclusion>-->
-<!--				<exclusion>-->
-<!--					<groupId>org.springframework.cloud</groupId>-->
-<!--					<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
-<!--				</exclusion>-->
-<!--			</exclusions>-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -40,10 +33,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-loadbalancer</artifactId>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
