--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.piomin.services</groupId>
-    <artifactId>sample-spring-cloud-microservices-future</artifactId>
+    <groupId>slick.mali.service</groupId>
+    <artifactId>maili</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>gateway-service</module>
-        <module>caller-service</module>
-        <module>callme-service</module>
+        <module>auth-service</module>
+        <module>email-service</module>
     </modules>
 
 </project>
