--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
   
       <modules>
           <module>gateway-service</module>
+          <module>user-service</module>
+          <module>alert-service</module>
       </modules>
   
       <repositories>
