--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,14 +1,7 @@
-server.port: 5001
+server.port: ${PORT:5001}
 spring:
   application:
     name: user-service
-
-  rabbitmq:
-    port: 5672
-    host: 10.0.2.15
-    username: guest
-    password: guest
-    
   cloud:
     consul:
       enabled: true
@@ -17,12 +10,16 @@ spring:
       config:
         format: YAML
       discovery:
-        instance-id: ${spring.application.name}:${random.value}
+        instance-id: "${spring.cloud.client.hostname}:${spring.application.name}:${random.int[1,999999]}"
         health-check-critical-timeout: 1m
         register-health-check: true
         prefer-ip-address: true
-
-    loadbalancer:
-      ribbon:
-        enabled: false
-
+  output.ansi.enabled: ALWAYS
+logging:
+  level:
+    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
+rabbitmq:
+  port: 5672
+  host: 10.0.2.15
+  username: guest
+  password: guest
