--- a/docker/docker-compose-files/full-stack.yml
+++ b/docker/docker-compose-files/full-stack.yml
@@ -47,8 +47,26 @@ services:
       options:
         max-size: "10m"
         max-file: "10"
-    depends_on:
-      - consul-service
+    restart: unless-stopped
+
+  database-service:
+    container_name: database-service
+    image: mysql:8.0.17
+    environment:
+      MYSQL_ROOT_PASSWORD: mali
+      MYSQL_DATABASE: mali
+    networks:
+      - prod 
+    ports:
+      - "3308:3306"
+    expose:
+      - "3308"
+    volumes:
+      - ./../data/database-service/:/var/lib/mysql
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
     restart: unless-stopped
 
   gateway-service:
@@ -62,13 +80,11 @@ services:
     networks:
       - prod
     volumes:
-      - ./../logs/gateway-service/:/var/log
+      - ./../data/gateway-service/:/var/log
     logging:
       options:
         max-size: "10m"
         max-file: "10"
-    depends_on:
-      - rabbitmq-service
   
   user-service:
     container_name: user-service
@@ -81,12 +97,15 @@ services:
     networks:
       - prod
     volumes:
-      - ./../logs/user-service/:/var/log
+      - ./../data/user-service/:/var/log
     logging:
       options:
         max-size: "10m"
         max-file: "10"
     depends_on:
+      - consul-service
+      - rabbitmq-service
+      - database-service
       - gateway-service
   
 
