--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -20,6 +20,17 @@ spring:
     host: 10.0.2.15
     username: guest
     password: guest
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3308/user_service?useSSL=false
+    username: root
+    password: "5Ej%0gOmr3GJybaG8@t10fIh,YD"
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: validate
 logging:
   level:
     org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
