included mysql service

--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     consul:
       enabled: true
       port: 8500
-      host: 10.0.2.15
+      host: 192.168.100.29
       config:
         format: YAML
       discovery:
@@ -17,9 +17,16 @@ spring:
   output.ansi.enabled: ALWAYS
   rabbitmq:
     port: 5672
-    host: 10.0.2.15
+    host: 192.168.100.29
     username: guest
     password: guest
+  jpa:
+    hibernate:
+      ddl-auto: none
+  datasource:
+    url: jdbc:mysql://localhost:3306/user_service
+    username: appuser
+    password: appuser
 logging:
   level:
     org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
