--- a/docker/docker-compose-files/full-stack.yml
+++ b/docker/docker-compose-files/full-stack.yml
@@ -47,8 +47,27 @@ services:
       options:
         max-size: "10m"
         max-file: "10"
-    depends_on:
-      - consul-service
+    restart: unless-stopped
+
+  # https://dev.mysql.com/doc/mysql-installation-excerpt/5.7/en/docker-mysql-getting-started.html
+  # GENERATED ROOT PASSWORD: &@muRaLoB&0RkufjycAP^@Dq@Dq
+  mysql-service:
+    container_name: mysql-service
+    image: mysql/mysql-server:8.0.13
+    environment:
+      - MYSQL_ROOT_HOST=% 
+    networks:
+      - prod
+    ports:
+      - "3308:3306"
+    expose:
+      - "3308"
+    volumes:
+      - ./../data/mysql-service/:/var/lib/mysq-server
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
     restart: unless-stopped
 
   gateway-service:
@@ -62,13 +81,15 @@ services:
     networks:
       - prod
     volumes:
-      - ./../logs/gateway-service/:/var/log
+      - ./../data/gateway-service/:/var/lib/mucunga90/gateway-service
     logging:
       options:
         max-size: "10m"
         max-file: "10"
     depends_on:
+      - consul-service
       - rabbitmq-service
+      - mysql-service
   
   user-service:
     container_name: user-service
@@ -81,12 +102,15 @@ services:
     networks:
       - prod
     volumes:
-      - ./../logs/user-service/:/var/log
+      - ./../data/user-service/:/var/lib/mucunga90/user-service
     logging:
       options:
         max-size: "10m"
         max-file: "10"
     depends_on:
+      - consul-service
+      - rabbitmq-service
+      - mysql-service
       - gateway-service
   
 
