--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -23,11 +23,22 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+      generate-ddl: false
+      show-sql: true
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3308/user_service?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://10.0.2.15:3308/user_service?useSSL=false&serverTimezone=UTC&autoReconnect=true
     username: root
     password: root
+    driver-class-name: com.mysql.jdbc.Driver
+    testWhileIdle: true
+    timeBetweenEvictionRunsMillis: 60000
+    validationQuery: SELECT 1
+  tomcat:
+      test-while-idle: true
+      time-between-eviction-runs-millis: 60000
+      validation-query: SELECT 1
+  hikari:
+      connection-timeout: 10000000
 logging:
   level:
     org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
