--- a/pom.xml
+++ b/pom.xml
@@ -1,43 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>slick.mali</groupId>
-    <artifactId>build-container</artifactId>
+    <artifactId>core-service</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
+    <name>core-service</name>
+  
+    <parent>    
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.0.RELEASE</version>
+    </parent>
     
-        <properties>
-          <java.version>8</java.version>
-      </properties>
-  
-      <parent>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-parent</artifactId>
-          <version>2.2.0.RELEASE</version>
-      </parent>
-  
-      <dependencyManagement>
-          <dependencies>
-              <dependency>
-                  <groupId>org.springframework.cloud</groupId>
-                  <artifactId>spring-cloud-dependencies</artifactId>
-                  <version>Hoxton.RC1</version>
-                  <type>pom</type>
-                  <scope>import</scope>
-              </dependency>
-          </dependencies>
-      </dependencyManagement>
-  
-      <modules>
-          <module>gateway-service</module>
-          <module>user-service</module>
-      </modules>
-  
-      <repositories>
-          <repository>
-              <id>spring-milestones</id>
-              <name>Spring Milestones</name>
-              <url>https://repo.spring.io/milestone</url>
-          </repository>
-      </repositories>
-  
+    <modules>
+        <module>gateway-service</module>
+        <module>user-service</module>
+    </modules>
+
   </project>
