--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -1,12 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>slick.mali</groupId>
+	<artifactId>user-service</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+	<name>user-service</name>
+    <description>User microservice</description>
+
 	<parent>
 		<groupId>slick.mali</groupId>
-		<artifactId>build-container</artifactId>
+		<artifactId>core-service</artifactId>
 		<version>1.0</version>
-	</parent>
-	<artifactId>user-service</artifactId>
+    </parent>
+
+	<properties>
+        <java.version>8</java.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -49,13 +60,36 @@
 		</dependency>
 	</dependencies>
 
+	<dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.RC1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+                    <mainClass>slick.mali.userservice.UserServiceApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+	<repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
 
 </project>
