--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>slick.mali</groupId>
 	<artifactId>user-service</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 	<name>user-service</name>
     <description>User microservice</description>
 
@@ -17,6 +17,7 @@
 
 	<properties>
         <java.version>8</java.version>
+		<start-class>slick.mali.userservice.UserServiceApplication</start-class>
     </properties>
 
 	<dependencies>
@@ -77,9 +78,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-                    <mainClass>slick.mali.userservice.UserServiceApplication</mainClass>
-                </configuration>
+				<configuration>    
+					<mainClass>slick.mali.userservice.UserServiceApplication</mainClass>
+				</configuration>
             </plugin>
         </plugins>
     </build>
