--- a/config-service/src/main/resources/config/gateway-service.yml
+++ b/config-service/src/main/resources/config/gateway-service.yml
@@ -17,24 +17,48 @@ spring:
         locator:
           enabled: true
       routes:
-      - id: employee-service
-        uri: lb://employee-service
+      - id: user-service
+        uri: lb://user-service
         predicates:
-        - Path=/employee/**
+        - Path=/user/**
         filters:
-        - RewritePath=/employee/(?<path>.*), /$\{path}
-      - id: department-service
-        uri: lb://department-service
+        - RewritePath=/user/(?<path>.*), /$\{path}
+      - id: customer-service
+        uri: lb://customer-service
         predicates:
-        - Path=/department/**
+        - Path=/customer/**
         filters:
-        - RewritePath=/department/(?<path>.*), /$\{path}
-      - id: organization-service
-        uri: lb://organization-service
+        - RewritePath=/customer/(?<path>.*), /$\{path}
+      - id: advert-service
+        uri: lb://advert-service
         predicates:
-        - Path=/organization/**
+        - Path=/advert/**
         filters:
-        - RewritePath=/organization/(?<path>.*), /$\{path}
+        - RewritePath=/advert/(?<path>.*), /$\{path}
+      - id: payment-service
+        uri: lb://payment-service
+        predicates:
+        - Path=/payment/**
+        filters:
+        - RewritePath=/payment/(?<path>.*), /$\{path}
+      - id: alert-service
+        uri: lb://alert-service
+        predicates:
+        - Path=/alert/**
+        filters:
+        - RewritePath=/alert/(?<path>.*), /$\{path}
+      - id: document-service
+        uri: lb://document-service
+        predicates:
+        - Path=/document/**
+        filters:
+        - RewritePath=/document/(?<path>.*), /$\{path}
+      - id: report-service
+        uri: lb://report-service
+        predicates:
+        - Path=/report/**
+        filters:
+        - RewritePath=/report/(?<path>.*), /$\{path}
       - id: openapi
         uri: http://localhost:${server.port}
         predicates:
