--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
     </parent>
     
     <modules>
+        <module>config-service</module>
+        <module>discovery-service</module>
         <module>gateway-service</module>
+        <module>proxy-service</module>
         <module>user-service</module>
     </modules>
 
