--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -1,39 +1,7 @@
-server.port: ${PORT:5001}
 spring:
   application:
     name: user-service
   cloud:
-    consul:
-      enabled: true
-      port: 8500
-      host: 10.0.2.15
-      config:
-        format: YAML
-      discovery:
-        instance-id: "${spring.application.name}-${random.int[1,999999]}"
-        health-check-critical-timeout: 1m
-        register-health-check: true
-        prefer-ip-address: true
-    loadbalancer.ribbon.enabled: false
-  output.ansi.enabled: ALWAYS
-  rabbitmq:
-    port: 5672
-    host: 10.0.2.15
-    username: appuser
-    password: appuser
-  jpa:
-    open-in-view: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-  datasource:
-    url: jdbc:mysql://10.0.2.15:3308/user_service?useSSL=false&serverTimezone=UTC&autoReconnect=true
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
-logging:
-  level:
-    org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
-    org.hibernate.SQL: DEBUG
+    config:
+      uri: http://localhost:8088
 
