--- a/config-service/src/main/resources/config/user-service.yml
+++ b/config-service/src/main/resources/config/user-service.yml
@@ -1,10 +1,12 @@
+debug: true
+
 server:
-  port: 8063
+  port: 5005
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8061/eureka/
+      defaultZone: http://localhost:5002/eureka/
 
 logging:
   pattern: 
