--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -1,9 +1,39 @@
-version: '3.6'
+version: '3.7'
 networks:
   prod-network:
     driver: bridge
 
 services:
+  config-service:
+    container_name: config-service
+    image: mucunga90/config-service:latest
+    networks:
+      - prod-network   
+    ports:
+      - '5001:5001'
+    expose:
+      - "5001"    
+    volumes:
+      - ./../data/config-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.001'
+          memory: 50M
+        reservations:
+          cpus: '0.001'
+          memory: 50M
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
+    healthcheck:
+        test: curl -f https://localhost:5001 || exit 1
+        interval: 30s
+        timeout: 10s
+        retries: 5
+    restart: "no"
+
   rabbitmq-service:
     container_name: rabbitmq-service
     image: rabbitmq:3.6-management-alpine
@@ -20,10 +50,25 @@ services:
       - "15672"
     volumes:
       - ./../data/rabbitmq-service/:/var/lib/rabbitmq
+    deploy:
+      resources:
+        limits:
+          cpus: '0.001'
+          memory: 50M
+        reservations:
+          cpus: '0.001'
+          memory: 50M
     logging:
       options:
         max-size: "10m"
         max-file: "10"
+    depends_on:
+      - config-service
+    healthcheck:
+        test: curl -f https://localhost:5672 || exit 1
+        interval: 30s
+        timeout: 10s
+        retries: 5
     restart: "no"
 
   # https://dev.mysql.com/doc/mysql-installation-excerpt/5.7/en/docker-mysql-getting-started.html
@@ -44,30 +89,26 @@ services:
       - "3308"
     volumes:
       - ./../data/mysql-service:/var/lib/mysql
-    logging:
-      options:
-        max-size: "10m"
-        max-file: "10"
-    restart: "no"
-
-  config-service:
-    container_name: config-service
-    image: mucunga90/config-service:latest
-    networks:
-      - prod-network   
-    ports:
-      - '5001:5001'
-    expose:
-      - "5001"    
-    volumes:
-      - ./../data/config-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.001'
+          memory: 50M
+        reservations:
+          cpus: '0.001'
+          memory: 50M
     logging:
       options:
         max-size: "10m"
         max-file: "10"
     depends_on:
+      - config-service
       - rabbitmq-service
-      - mysql-service
+    healthcheck:
+        test: curl -f https://localhost:3308 || exit 1
+        interval: 30s
+        timeout: 10s
+        retries: 5
     restart: "no"
 
   discovery-service:
@@ -81,32 +122,28 @@ services:
       - "5002"    
     volumes:
       - ./../data/discovery-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.001'
+          memory: 50M
+        reservations:
+          cpus: '0.001'
+          memory: 50M
     logging:
       options:
         max-size: "10m"
         max-file: "10"
     depends_on:
       - config-service
-    restart: "no"
-
-  gateway-service:
-    container_name: gateway-service
-    image: mucunga90/gateway-service:latest
-    networks:
-      - prod-network    
-    ports:
-      - '5003:5003'
-    expose:
-      - "5003"    
-    volumes:
-      - ./../data/gateway-service/:/var/lib/app
-    logging:
-      options:
-        max-size: "10m"
-        max-file: "10"
-    depends_on:
-      - config-service
-      - discovery-service
+      - rabbitmq-service
+      - mysql-service
+    healthcheck:
+        test: curl -f https://localhost:5002 || exit 1
+        interval: 30s
+        timeout: 10s
+        retries: 5
+    command: ["wait-for-it.sh", "config-service:5001"]
     restart: "no"
 
   proxy-service:
@@ -120,14 +157,28 @@ services:
       - "5004"    
     volumes:
       - ./../data/proxy-service/:/var/lib/app
+    deploy:
+      resources:
+        limits:
+          cpus: '0.001'
+          memory: 50M
+        reservations:
+          cpus: '0.001'
+          memory: 50M
     logging:
       options:
         max-size: "10m"
         max-file: "10"
     depends_on:
       - config-service
+      - rabbitmq-service
+      - mysql-service
       - discovery-service
-      - gateway-service
+    healthcheck:
+        test: curl -f https://localhost:5004 || exit 1
+        interval: 30s
+        timeout: 10s
+        retries: 5
     restart: "no"
   
   user-service:
@@ -151,6 +202,5 @@ services:
       - gateway-service
       - proxy-service
     restart: "no"
-  
 
   
